--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="zh-cn">
 
 <head>
-  <title>WebApp &mdash; Website Template by Colorlib</title>
+  <title>建筑节能动态保温设计</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -63,21 +68,18 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">主页</a></li>
+                <li><a href="index.html" class="nav-link">主页</a></li>
                 <li class="has-children">
-                  <a href="#features-section" class="nav-link">特性</a>
+                  <a href="#features" class="nav-link">特性</a>
                   <ul class="dropdown">
-                    <li><a href="#" class="nav-link">Money Saving</a></li>
-                    <li><a href="#" class="nav-link">Powerful Apps</a></li>
-                    <li><a href="#" class="nav-link">Efficient Support</a></li>
-                    <li><a href="#" class="nav-link">Innovative Technologies</a></li>
+                    <li><a href="#features-1" class="nav-link">建筑节能成为焦点</a></li>
+                    <li><a href="#features-2" class="nav-link">围护结构动态传热计算模型</a></li>
+                    <li><a href="#features-3" class="nav-link">围护结构动态保温设计软件</a></li>
                   </ul>
                 </li>
                 <li><a href="update.html" class="nav-link">历史版本</a></li>
 
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-facebook"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-twitter"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-linkedin"></span></a></li>
+                <li class="social"><a href="http://buildingdata.xauat.edu.cn/" target="_blank" class="nav-link"><span class="icon-link"></span></a></li>
               </ul>
             </nav>
           </div>
@@ -99,105 +101,105 @@
             <div class="mb-5">
               <h1 class="hero-heading">建筑节能 <strong>动态保温设计</strong></h1>
               <p>Dynamic thermal insulation design of building envelopes.</p>
-              <a href="#" class="btn btn-primary">Try it for free</a>
+              <a href="release/v0.9.0/DTID_Setup.zip" class="btn btn-primary icon-windows" style="margin: 0 10px 0 10px;"> 下载安装版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：830MB</span></a>
+              <a href="release/v0.9.0/DTID_Portable.rar" class="btn btn-primary icon-windows" style="margin: 0 10px 0 10px;"> 下载便携版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：748KB（需要Matlab环境）</span></a>
             </div>
-            <img src="images/untree.co_dashboard_mocklayout_laptop.png" alt="image" class="img-fluid">
+            <img src="images/home.png" alt="image" class="img-fluid">
           </div>
         </div>
       </div>
     </div>
 
 
-
-    <div class="site-section pt-0" id="features-section">
+    <div class="site-section pt-0" id="features">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-5">
             <span class="subtitle-1">Features</span>
-            <h2 class="section-title-1 font-weight-bold">The Features</h2>
+            <h2 class="section-title-1 font-weight-bold">软件特性</h2>
           </div>
         </div>
-        <div class="row align-items-center mb-5">
+        <div class="row align-items-center mb-5" id="features-1">
           <div class="col-lg-6 mb-5 order-lg-2 mb-lg-0" data-aos="fade-right">
-            <img src="images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="images/features-1.jpg" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 mr-auto">
             <div class="mb-4">
-              <h2 class="section-title-2">Powerful Apps</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facere sequi excepturi pariatur quos itaque magni, impedit a quas qui?</p>
+              <h2 class="section-title-2">建筑节能成为焦点</h2>
+              <p>随着我国经济的极速发展，建筑面积的增长和人们对建筑热舒适水平要求的提高，致使近年来我国居住建筑采暖能耗持续增长。因此，寻找经济、合理的措施进行建筑节能已成为国家关注的焦点。</p>
             </div>
 
             <div class="d-flex feature-v1">
-              <span class="wrap-icon icon-users"></span>
+              <span class="wrap-icon icon-building-o"></span>
               <div>
-                <h3>Strategic Partners</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>提高建筑围护结构的热工性能</h3>
+                <p>科学有效的提高建筑围护结构的热工性能是在保证居住建筑热环境质量的前提下，降低建筑采暖能耗途径中潜力最大、最直接的方式。对于冬季寒冷有采暖需求的地区，合理的围护结构保温设计即是提高围护结构热工性能，降低建筑能耗的有效措施。</p>
               </div>
             </div>
 
             <div class="d-flex feature-v1">
-              <span class="wrap-icon icon-layers"></span>
+              <span class="wrap-icon icon-calculator"></span>
               <div>
-                <h3>Business in Mind</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>准确描述围护结构动态传热计算模型</h3>
+                <p>本软件提出了能够准确描述围护结构动态传热特性并有效利用太阳能资源的围护结构动态保温设计方法及室外计算参数，以提高保温设计精度。</p>
               </div>
             </div>
 
           </div>
         </div>
 
-        <div class="row align-items-center">
+        <div class="row align-items-center mb-5" id="features-2">
           <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-left">
-            <img src="images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="images/features-2.jpg" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 order-lg-1 ml-auto">
             <div class="mb-4">
-              <h2 class="section-title-2">Innovative Technologies</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facere sequi excepturi pariatur quos itaque magni, impedit a quas qui?</p>
+              <h2 class="section-title-2">围护结构动态传热计算模型</h2>
+              <p>考虑太阳辐射热作用的动态室外计算参数作为室外边界条件，针对不同地区不同房间采暖运行方式，基于有限差分法建立了围护结构动态传热模型并提出动态保温设计计算方法。</p>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-cog"></span>
               <div>
-                <h3>Many Features</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>有限差分法</h3>
+                <p>针对不同地区不同房间采暖运行方式，基于有限差分法建立了围护结构动态传热模型并提出动态保温设计计算方法。</p>
               </div>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-bolt"></span>
               <div>
-                <h3>Easy to use</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>边界条件</h3>
+                <p>本软件以考虑太阳辐射热作用的动态室外计算参数作为室外边界条件。</p>
               </div>
             </div>
 
           </div>
         </div>
 
-        <div class="row align-items-center mb-5">
+        <div class="row align-items-center mb-5" id="features-3">
           <div class="col-lg-6 mb-5 order-lg-2 mb-lg-0" data-aos="fade-right">
-            <img src="images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="images/features-3.jpg" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 mr-auto">
             <div class="mb-4">
-              <h2 class="section-title-2">Safe secure and reliable</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facere sequi excepturi pariatur quos itaque magni, impedit a quas qui?</p>
+              <h2 class="section-title-2">围护结构动态保温设计软件</h2>
+              <p>基于不同地区室外气候条件及围护结构的设计要求，在考虑室外干球温度与太阳辐射综合热作用的基础上，确定建筑围护结构动态保温设计室外计算参数。</p>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-users"></span>
               <div>
-                <h3>Strategic Partners</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>一维非稳态传热数值计算</h3>
+                <p>以此作为室外边界条件，结合设定的围护结构几何模型和室内边界条件，进行各朝向围护结构一维非稳态传热数值计算。</p>
               </div>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-layers"></span>
               <div>
-                <h3>Business in Mind</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>结果分析与设计要求</h3>
+                <p>进而分析围护结构保温性能是否满足设计要求，用于指导不同地区进行围护结构动态保温设计。</p>
               </div>
             </div>
 
@@ -209,9 +211,9 @@
 
     <div class="site-section text-center">
       <div class="container">
-        <h2 class="text-black mb-3">Join over 1,700 companies that trust us.</h2>
-        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p><a href="#" class="btn btn-primary">Try it for free</a></p>
+        <h2 class="text-black mb-3">我们软件的更新历史</h2>
+        <p class="mb-5">Software update history.</p>
+        <p><a href="update.html" class="btn btn-primary">历史更新</a></p>
       </div>
     </div>
 
@@ -221,49 +223,33 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-5">
-                <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                <h2 class="footer-heading mb-4"><strong>关于我们</strong></h2>
+                <p>西安建筑科技大学</p>
+                <p>杨柳、张率、刘衍、侯立强、刘堂</p>
               </div>
               <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
+                <h2 class="footer-heading mb-4"><strong>菜单</strong></h2>
                 <ul class="list-unstyled">
-                  <li><a href="#about-section" class="smoothscroll">Terms</a></li>
-                  <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                  <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-                  <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                  <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                  <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                  <li><a href="index.html" class="smoothscroll">主页</a></li>
+                  <li><a href="update.html" class="smoothscroll">历史更新</a></li>
                 </ul>
               </div>
               <div class="col-md-3 footer-social">
-                <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                <h2 class="footer-heading mb-4"><strong>数据平台</strong></h2>
+                <a href="http://buildingdata.xauat.edu.cn/" target="_blank" class="pl-0 pr-3"><span class="icon-link"></span></a>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
+            <h2 class="footer-heading mb-4"></h2>
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;
-                  <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 建筑节能团队 All rights reserved.
                 </small></p>
 
             </div>
@@ -273,7 +259,7 @@
       </div>
     </footer>
 
-  </div> <!-- .site-wrap -->
+  </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
