--- a/update.html
+++ b/update.html
@@ -2,9 +2,14 @@
 <html lang="zh-cn">
 
 <head>
-  <title>WebApp &mdash; Website Template by Colorlib</title>
+  <title>历史更新 - 建筑节能动态保温设计</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -63,21 +68,18 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">主页</a></li>
+                <li><a href="index.html" class="nav-link">主页</a></li>
                 <li class="has-children">
-                  <a href="#features-section" class="nav-link">特性</a>
+                  <a href="#features" class="nav-link">特性</a>
                   <ul class="dropdown">
-                    <li><a href="#" class="nav-link">Money Saving</a></li>
-                    <li><a href="#" class="nav-link">Powerful Apps</a></li>
-                    <li><a href="#" class="nav-link">Efficient Support</a></li>
-                    <li><a href="#" class="nav-link">Innovative Technologies</a></li>
+                    <li><a href="index.html#features-1" class="nav-link">建筑节能成为焦点</a></li>
+                    <li><a href="index.html#features-2" class="nav-link">围护结构动态传热计算模型</a></li>
+                    <li><a href="index.html#features-3" class="nav-link">围护结构动态保温设计软件</a></li>
                   </ul>
                 </li>
                 <li><a href="update.html" class="nav-link">历史版本</a></li>
 
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-facebook"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-twitter"></span></a></li>
-                <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-linkedin"></span></a></li>
+                <li class="social"><a href="http://buildingdata.xauat.edu.cn/" target="_blank" class="nav-link"><span class="icon-link"></span></a></li>
               </ul>
             </nav>
           </div>
@@ -91,14 +93,13 @@
     </header>
 
 
-
     <div class="site-section hero" id="home-section">
       <div class="container text-center">
         <div class="row justify-content-center text-center">
           <div class="col-lg-10">
             <div class="mb-5">
               <h1 class="hero-heading">软件 <strong>历史版本</strong></h1>
-              <p>Dynamic thermal insulation design of building envelopes.</p>
+              <p>Software update history.</p>
             </div>
           </div>
         </div>
@@ -112,114 +113,31 @@
         <div class="timeline-content-6">
           <h1 class="hero-heading">更新 <strong>动态</strong></h1>
           <ul class="timeline">
-            <!-- Item 1 -->
+
+            <!-- v1.0 正式版 -->
             <li>
               <div class="direction-r">
                 <div class="flag-wrapper">
-                  <span class="flag">Fitness</span>
-                  <span class="time-wrapper"><span class="time">2018 - present</span></span>
+                  <span class="flag">v1.0</span>
+                  <span class="time-wrapper"><span class="time">即将推出</span></span>
                 </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quas
-                  voluptatum ea culpa repellendus porro mollitia quidem incidunt ullam ducimus!</div>
+                <div class="desc">解决兼容性问题后，将放出正式版。</div>
               </div>
             </li>
   
-            <!-- Item 2 -->
+            <!-- v0.9 测试版 -->
             <li>
               <div class="direction-l">
                 <div class="flag-wrapper">
-                  <span class="flag">Gym</span>
-                  <span class="time-wrapper"><span class="time">2017 - 2018</span></span>
+                  <span class="flag">v0.9</span>
+                  <span class="time-wrapper"><span class="time">2022.12.29</span></span>
                 </div>
-                <div class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad cumque
-                  exercitationem maiores alias! Necessitatibus nulla nostrum obcaecati iusto omnis
-                  dignissimos tempore ratione ab. Saepe qui voluptas nihil ullam maxime odio.</div>
+                <div class="desc">建筑节能动态保温设计软件测试发布。目前由于 Matlab 环境问题，可能会遇到一些兼容性问题。</div>
               </div>
             </li>
   
-            <!-- Item 3 -->
-            <li>
-              <div class="direction-r">
-                <div class="flag-wrapper">
-                  <span class="flag">Zumba</span>
-                  <span class="time-wrapper"><span class="time">2015 - 2017</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-                  unde.</div>
-              </div>
-            </li>
-  
-            <!-- Item 2 -->
-            <li>
-              <div class="direction-l">
-                <div class="flag-wrapper">
-                  <span class="flag">Aerobic</span>
-                  <span class="time-wrapper"><span class="time">2013 - 2015</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate nemo,
-                  accusantium libero eligendi officiis iusto.</div>
-              </div>
-            </li>
-  
-  
-            <!-- Item 1 -->
-            <li>
-              <div class="direction-r">
-                <div class="flag-wrapper">
-                  <span class="flag">Healthy</span>
-                  <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit!</div>
-              </div>
-            </li>
-  
-            <!-- Item 2 -->
-            <li>
-              <div class="direction-l">
-                <div class="flag-wrapper">
-                  <span class="flag">Cross Fit</span>
-                  <span class="time-wrapper"><span class="time">2009 - 2013</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ducimus
-                  pariatur, molestiae autem suscipit totam error reprehenderit dolores nostrum reiciendis
-                  quas voluptas et repellat velit, qui eos ut minus consequuntur, quam facere? Culpa modi,
-                  facere laborum distinctio perspiciatis nesciunt sunt.</div>
-              </div>
-            </li>
-  
-            <!-- Item 3 -->
-            <li>
-              <div class="direction-r">
-                <div class="flag-wrapper">
-                  <span class="flag">Workout</span>
-                  <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo reiciendis
-                  beatae quam odit fuga voluptates consequuntur quaerat iure, aperiam eveniet est porro
-                  veritatis cum corrupti consequatur dolore provident quas culpa similique! Dolorum ipsam
-                  aperiam obcaecati.</div>
-              </div>
-            </li>
-  
-            <!-- Item 2 -->
-            <li>
-              <div class="direction-l">
-                <div class="flag-wrapper">
-                  <span class="flag">Fitness</span>
-                  <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
-                </div>
-                <div class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis dicta eum
-                  officia enim rem quibusdam, culpa, rerum eaque odio reiciendis ipsa quas, odit quisquam
-                  ducimus?</div>
-              </div>
-            </li>
           </ul>
   
-        </div>
-        <div class="w3l-copy-right text-center">
-          <p>© 2020 Lifestyle Timeline. All rights reserved | Design by
-            <a href="http://w3layouts.com/" target="_blank">W3layouts</a>
-          </p>
         </div>
       </div>
     </section>
@@ -230,49 +148,33 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-5">
-                <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                <h2 class="footer-heading mb-4"><strong>关于我们</strong></h2>
+                <p>西安建筑科技大学</p>
+                <p>杨柳、张率、刘衍、侯立强、刘堂</p>
               </div>
               <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
+                <h2 class="footer-heading mb-4"><strong>菜单</strong></h2>
                 <ul class="list-unstyled">
-                  <li><a href="#about-section" class="smoothscroll">Terms</a></li>
-                  <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                  <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-                  <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                  <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                  <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+                  <li><a href="index.html" class="smoothscroll">主页</a></li>
+                  <li><a href="update.html" class="smoothscroll">历史更新</a></li>
                 </ul>
               </div>
               <div class="col-md-3 footer-social">
-                <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                <h2 class="footer-heading mb-4"><strong>数据平台</strong></h2>
+                <a href="http://buildingdata.xauat.edu.cn/" target="_blank" class="pl-0 pr-3"><span class="icon-link"></span></a>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
+            <h2 class="footer-heading mb-4"></h2>
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;
-                  <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 建筑节能团队 All rights reserved.
                 </small></p>
 
             </div>
@@ -282,7 +184,7 @@
       </div>
     </footer>
 
-  </div> <!-- .site-wrap -->
+  </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
