调整移动页面布局

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="mb-5">
               <h1 class="hero-heading">建筑节能 <strong>动态保温设计</strong></h1>
               <p>Dynamic thermal insulation design of building envelopes.</p>
-              <a href="https://github.com/buildingdata/getDTID/releases/download/v0.9.0/DTID_Setup_v0.9.0.zip" class="btn btn-primary icon-windows" style="margin: 0 10px 0 10px;"> 下载安装版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：830MB</span></a>
-              <a href="https://github.com/buildingdata/getDTID/releases/download/v0.9.0/DTID_Portable_v0.9.0.zip" class="btn btn-primary icon-windows" style="margin: 0 10px 0 10px;"> 下载便携版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：748KB（需要Matlab环境）</span></a>
+              <a href="https://github.com/buildingdata/getDTID/releases/download/v0.9.0/DTID_Setup_v0.9.0.zip" class="btn btn-primary icon-windows" style="margin: 10px 10px 10px 10px;"> 下载安装版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：830MB</span></a>
+              <a href="https://github.com/buildingdata/getDTID/releases/download/v0.9.0/DTID_Portable_v0.9.0.zip" class="btn btn-primary icon-windows" style="margin: 10px 10px 10px 10px;"> 下载便携版 v0.9.0<br><span style="font-size: 8px; color: aliceblue;">大小：748KB（需要Matlab环境）</span></a>
             </div>
             <img src="images/home.png" alt="image" class="img-fluid">
           </div>
