--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
-
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                <li><a href="https://github.com/buildingdata/getDTID" class="nav-link">Github</a></li>
+
                 <li class="social"><a href="https://github.com/buildingdata/getDTID" target="_blank" class="nav-link"><span class="icon-github"></span></a></li>
               </ul>
             </nav>
@@ -115,25 +116,44 @@
     <footer class="site-footer bg-light">
       <div class="container">
         <div class="row">
+
           <div class="col-md-9">
             <div class="row">
+
               <div class="col-md-5">
-                <h2 class="footer-heading mb-4"><strong>关于我们</strong></h2>
-                <p>杨柳、张率、刘衍、侯立强、刘堂</p><br>
-                <img src="images/xauat.png" alt="image" class="img-fluid">
+                <h2 class="footer-heading mb-4"><strong>团队成员</strong></h2>
+                <p>杨柳（教授）、张率（博士生）<br>刘衍（副教授）、侯立强（博士生）<br>刘堂（硕士生）</p><br>
               </div>
+
+              <div class="col-md-4">
+                <h2 class="footer-heading mb-4"><strong>联系方式</strong></h2>
+                <ul class="list-unstyled">
+                  <p>杨柳教授：<a href="mailto:yangliu@xauat.edu.cn">yangliu@xauat.edu.cn</a><br>
+                     张率：<a href="mailto:shuaizhang97@163.com">shuaizhang97@163.com</a></p>
+                </ul>
+              </div>
+
+              <div class="col-md-3">
+                <h2 class="footer-heading mb-4"><strong>联系地址</strong></h2>
+                <ul class="list-unstyled">
+                  <p>西安市碑林区雁塔路13号<br>西安建筑科技大学</p>
+                </ul>
+              </div>
+
             </div>
           </div>
+
           <div class="col-md-3">
-            <h2 class="footer-heading mb-4"></h2>
+            <img src="https://cn.xauat.edu.cn/img/logo.png" alt="image" class="img-fluid">
           </div>
+
         </div>
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
                   Copyright &copy;
-                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 建筑节能团队 All rights reserved.
+                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 杨柳教授建筑节能团队 All rights reserved.
                 </small></p>
 
             </div>
@@ -142,6 +162,7 @@
         </div>
       </div>
     </footer>
+
 
   </div>
 
