--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="https://github.com/buildingdata/getDTID" class="nav-link">Github</a></li>
+                <li><a href="http://buildingdata.xauat.edu.cn/" class="nav-link">数据平台</a></li>
 
                 <li class="social"><a href="https://github.com/buildingdata/getDTID" target="_blank" class="nav-link"><span class="icon-github"></span></a></li>
               </ul>
@@ -120,16 +120,16 @@
           <div class="col-md-9">
             <div class="row">
 
-              <div class="col-md-5">
+              <div class="col-md-4">
                 <h2 class="footer-heading mb-4"><strong>团队成员</strong></h2>
-                <p>杨柳（教授）、张率（博士生）<br>刘衍（副教授）、侯立强（博士生）<br>刘堂（硕士生）</p><br>
+                <p>杨柳（教授）、刘衍（教授）<br>张率（博士）、侯立强（博士）<br>刘堂</p><br>
               </div>
 
-              <div class="col-md-4">
+              <div class="col-md-5">
                 <h2 class="footer-heading mb-4"><strong>联系方式</strong></h2>
                 <ul class="list-unstyled">
                   <p>杨柳教授：<a href="mailto:yangliu@xauat.edu.cn">yangliu@xauat.edu.cn</a><br>
-                     张率：<a href="mailto:shuaizhang97@163.com">shuaizhang97@163.com</a></p>
+                     张率博士：<a href="mailto:shuaizhang97@163.com">shuaizhang97@163.com</a></p>
                 </ul>
               </div>
 
@@ -144,7 +144,7 @@
           </div>
 
           <div class="col-md-3">
-            <img src="https://cn.xauat.edu.cn/img/logo.png" alt="image" class="img-fluid">
+            <a href="https://cn.xauat.edu.cn/"><img src="https://cn.xauat.edu.cn/img/logo.png" alt="image" class="img-fluid"></a>
           </div>
 
         </div>
@@ -153,7 +153,7 @@
             <div class="border-top pt-5">
               <p class="copyright"><small>
                   Copyright &copy;
-                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 杨柳教授建筑节能团队 All rights reserved.
+                  <script>document.write(new Date().getFullYear());</script> 西安建筑科技大学 <a href="http://buildingdata.xauat.edu.cn/">杨柳教授建筑节能团队</a> All rights reserved.
                 </small></p>
 
             </div>
