--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
               <div class="col-md-4">
                 <h2 class="footer-heading mb-4"><strong>团队成员</strong></h2>
-                <p>杨柳（教授）、刘衍（教授）<br>张率（博士）、侯立强（博士）<br>刘堂</p><br>
+                <p>杨柳（教授）、刘衍（教授）、<br>张率（博士）、侯立强（博士）、<br>刘堂</p><br>
               </div>
 
               <div class="col-md-5">
