修复移动端菜单无法点击

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="http://buildingdata.xauat.edu.cn/" class="nav-link">数据平台</a></li>
+                <li><a href="http://buildingdata.xauat.edu.cn/" class="nav-link" onclick="window.open('http://buildingdata.xauat.edu.cn/', '_self')">数据平台</a></li>
 
-                <li class="social"><a href="https://github.com/buildingdata/getDTID" target="_blank" class="nav-link"><span class="icon-github"></span></a></li>
+                <li class="social"><a href="https://github.com/buildingdata/getDTID" target="_blank" class="nav-link"  onclick="window.open('https://github.com/buildingdata/getDTID')"><span class="icon-github"></span></a></li>
               </ul>
             </nav>
           </div>
